[tool.poetry]
name = "playground-pytorch"
version = "0.1.0"
description = ""
authors = ["oxycaster <480125+oxycaster@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
